TS-1411: Seg fault when using %<cquuc>